登录、注册、商品列表、新增商品、修改商品、删除商品完成

--- a/application/admin/view/index/goods.html
+++ b/application/admin/view/index/goods.html
@@ -105,317 +105,63 @@
 								<div class="table-responsive">
 									<table class="datatable table table-hover table-center mb-0">
 										<thead>
-											<tr>
-												<th>Invoice Number</th>
-												<th>Mentee ID</th>
-												<th>Mentee Name</th>
-												<th>Total Amount</th>
-												<th>Created Date</th>
-												<th class="text-center">Status</th>
-												<th class="text-center">Actions</th>
+											<tr class="text-center">
+												<th>No.</th>
+												<th>Goods SN</th>
+												<th>Goods Name</th>
+												<th>Origin Price</th>
+												<th>Discount Price</th>
+												<th>Discount Percentage</th>
+												<th>Recommend</th>
+												<th>Actions</th>
 											</tr>
 										</thead>
 										<tbody>
-											<tr>
-												<td><a href="invoice.html">#IN0001</a></td>
-												<td>#01</td>
-												<td>
+											{volist name="goods" id="vo" key="k" empty="暂时没有数据"}
+											<tr class="text-center">
+												<td>#{$k}</td>
+												<td><a href="{:url('/goods/index/detail/'.$vo.id)}" target="_blake">{$vo.goods_sn}</a></td>
+												<td class="text-left">
 													<h2 class="table-avatar">
-														<a href="profile.html" class="avatar avatar-sm mr-2"><img
-																class="avatar-img rounded-circle"
-																src="/assets/img/user/user.jpg" alt="User Image"></a>
-														<a href="profile.html">Jonathan Doe </a>
+														<a href="{:url('/goods/index/detail/'.$vo.id)}">{$vo.goods_name}</a>
 													</h2>
 												</td>
-												<td>$100.00</td>
-												<td>9 Sep 2019</td>
-												<td class="text-center">
-													<span class="badge badge-pill bg-success inv-badge">Paid</span>
+												<td class="text-right">${$vo.origin_price}</td>
+												<td class="text-right">${$vo.goods_price}</td>
+												<td>
+													{if $vo.percentage}
+													{$vo.percentage} %
+													{else}
+													-
+													{/if}
+												</td>
+												<td>
+													{if $vo.is_recommend}
+													<span class="badge badge-pill bg-success inv-badge">Recommend</span>
+													{else}
+													-
+													{/if}
 												</td>
 												<td class="text-right">
 													<div class="actions">
-
-														<a data-toggle="modal" href="#edit_invoice_report"
-															class="btn btn-sm bg-success-light mr-2">
+														<a class="btn btn-sm bg-success-light mr-2  btn-edit"
+															href="{:url('/admin/index/edit/id/'.$vo.id)}" data-goods-id="{$vo.id}">
 															<i class="fe fe-pencil"></i> Edit
 														</a>
-														<a class="btn btn-sm bg-danger-light" data-toggle="modal"
-															href="#delete_modal">
+														<form action="{:url('/admin/index/delete/id/'.$vo.id)}" method="post" class="d-inline">
+															<input type="hidden" name="_method" value="delete">
+															<button class="btn btn-sm bg-danger-light btn-delete">
+																<i class="fe fe-trash"></i> Delete
+															</button>
+														</form>
+														<!--  <a class="btn btn-sm bg-danger-light  btn-delete" href="javascript:;"
+															data-goods-id="{$vo.id}">
 															<i class="fe fe-trash"></i> Delete
-														</a>
+														</a> -->
 													</div>
 												</td>
 											</tr>
-											<tr>
-												<td><a href="invoice.html">#IN0002</a></td>
-												<td>#02</td>
-												<td>
-													<h2 class="table-avatar">
-														<a href="profile.html" class="avatar avatar-sm mr-2"><img
-																class="avatar-img rounded-circle"
-																src="/assets/img/user/user1.jpg" alt="User Image"></a>
-														<a href="profile.html">Julie Pennington </a>
-													</h2>
-												</td>
-												<td>$200.00</td>
-												<td>29 Oct 2019</td>
-												<td class="text-center">
-													<span class="badge badge-pill bg-success inv-badge">Paid</span>
-												</td>
-												<td class="text-right">
-													<div class="actions">
-
-														<a data-toggle="modal" href="#edit_invoice_report"
-															class="btn btn-sm bg-success-light mr-2">
-															<i class="fe fe-pencil"></i> Edit
-														</a>
-														<a class="btn btn-sm bg-danger-light" data-toggle="modal"
-															href="#delete_modal">
-															<i class="fe fe-trash"></i> Delete
-														</a>
-													</div>
-												</td>
-											</tr>
-											<tr>
-												<td><a href="invoice.html">#IN0003</a></td>
-												<td>#03</td>
-												<td>
-													<h2 class="table-avatar">
-														<a href="profile.html" class="avatar avatar-sm mr-2"><img
-																class="avatar-img rounded-circle"
-																src="/assets/img/user/user2.jpg" alt="User Image"></a>
-														<a href="profile.html">Tyrone Roberts</a>
-													</h2>
-												</td>
-												<td>$250.00</td>
-												<td>25 Sep 2019</td>
-												<td class="text-center">
-													<span class="badge badge-pill bg-success inv-badge">Paid</span>
-												</td>
-												<td class="text-right">
-													<div class="actions">
-
-														<a data-toggle="modal" href="#edit_invoice_report"
-															class="btn btn-sm bg-success-light mr-2">
-															<i class="fe fe-pencil"></i> Edit
-														</a>
-														<a class="btn btn-sm bg-danger-light" data-toggle="modal"
-															href="#delete_modal">
-															<i class="fe fe-trash"></i> Delete
-														</a>
-													</div>
-												</td>
-											</tr>
-											<tr>
-												<td><a href="invoice.html">#IN0004</a></td>
-												<td>#04</td>
-												<td>
-													<h2 class="table-avatar">
-														<a href="profile.html" class="avatar avatar-sm mr-2"><img
-																class="avatar-img rounded-circle"
-																src="/assets/img/user/user3.jpg" alt="User Image"></a>
-														<a href="profile.html">Allen Davis </a>
-													</h2>
-												</td>
-												<td>$150.00</td>
-												<td>9 Oct 2019</td>
-												<td class="text-center">
-													<span class="badge badge-pill bg-success inv-badge">Paid</span>
-												</td>
-												<td class="text-right">
-													<div class="actions">
-
-														<a data-toggle="modal" href="#edit_invoice_report"
-															class="btn btn-sm bg-success-light mr-2">
-															<i class="fe fe-pencil"></i> Edit
-														</a>
-														<a class="btn btn-sm bg-danger-light" data-toggle="modal"
-															href="#delete_modal">
-															<i class="fe fe-trash"></i> Delete
-														</a>
-													</div>
-												</td>
-											</tr>
-											<tr>
-												<td><a href="invoice.html">#IN0005</a></td>
-												<td>#05</td>
-												<td>
-													<h2 class="table-avatar">
-														<a href="profile.html" class="avatar avatar-sm mr-2"><img
-																class="avatar-img rounded-circle"
-																src="/assets/img/user/user4.jpg" alt="User Image"></a>
-														<a href="profile.html">Patricia Manzi </a>
-													</h2>
-												</td>
-												<td>$350.00</td>
-												<td>19 Nov 2019</td>
-												<td class="text-center">
-													<span class="badge badge-pill bg-success inv-badge">Paid</span>
-												</td>
-												<td class="text-right">
-													<div class="actions">
-
-														<a data-toggle="modal" href="#edit_invoice_report"
-															class="btn btn-sm bg-success-light mr-2">
-															<i class="fe fe-pencil"></i> Edit
-														</a>
-														<a class="btn btn-sm bg-danger-light" data-toggle="modal"
-															href="#delete_modal">
-															<i class="fe fe-trash"></i> Delete
-														</a>
-													</div>
-												</td>
-											</tr>
-											<tr>
-												<td><a href="invoice.html">#IN0006</a></td>
-												<td>#06</td>
-												<td>
-													<h2 class="table-avatar">
-														<a href="profile.html" class="avatar avatar-sm mr-2"><img
-																class="avatar-img rounded-circle"
-																src="/assets/img/user/user5.jpg" alt="User Image"></a>
-														<a href="profile.html">Elsie Gilley</a>
-													</h2>
-												</td>
-												<td>$300.00</td>
-												<td>12 Oct 2019</td>
-												<td class="text-center">
-													<span class="badge badge-pill bg-success inv-badge">Paid</span>
-												</td>
-												<td class="text-right">
-													<div class="actions">
-
-														<a data-toggle="modal" href="#edit_invoice_report"
-															class="btn btn-sm bg-success-light mr-2">
-															<i class="fe fe-pencil"></i> Edit
-														</a>
-														<a class="btn btn-sm bg-danger-light" data-toggle="modal"
-															href="#delete_modal">
-															<i class="fe fe-trash"></i> Delete
-														</a>
-													</div>
-												</td>
-											</tr>
-											<tr>
-												<td><a href="invoice.html">#IN0007</a></td>
-												<td>#07</td>
-												<td>
-													<h2 class="table-avatar">
-														<a href="profile.html" class="avatar avatar-sm mr-2"><img
-																class="avatar-img rounded-circle"
-																src="/assets/img/user/user11.jpg" alt="User Image"></a>
-														<a href="profile.html"> Joan Gardner</a>
-													</h2>
-												</td>
-												<td>$250.00</td>
-												<td>25 Oct 2019</td>
-												<td class="text-center">
-													<span class="badge badge-pill bg-success inv-badge">Paid</span>
-												</td>
-												<td class="text-right">
-													<div class="actions">
-
-														<a data-toggle="modal" href="#edit_invoice_report"
-															class="btn btn-sm bg-success-light mr-2">
-															<i class="fe fe-pencil"></i> Edit
-														</a>
-														<a class="btn btn-sm bg-danger-light" data-toggle="modal"
-															href="#delete_modal">
-															<i class="fe fe-trash"></i> Delete
-														</a>
-													</div>
-												</td>
-											</tr>
-											<tr>
-												<td><a href="invoice.html">#IN0008</a></td>
-												<td>#08</td>
-												<td>
-													<h2 class="table-avatar">
-														<a href="profile.html" class="avatar avatar-sm mr-2"><img
-																class="avatar-img rounded-circle"
-																src="/assets/img/user/user12.jpg" alt="User Image"></a>
-														<a href="profile.html"> Daniel Griffing</a>
-													</h2>
-												</td>
-												<td>$150.00</td>
-												<td>30 Oct 2019</td>
-												<td class="text-center">
-													<span class="badge badge-pill bg-success inv-badge">Paid</span>
-												</td>
-												<td class="text-right">
-													<div class="actions">
-
-														<a data-toggle="modal" href="#edit_invoice_report"
-															class="btn btn-sm bg-success-light mr-2">
-															<i class="fe fe-pencil"></i> Edit
-														</a>
-														<a class="btn btn-sm bg-danger-light" data-toggle="modal"
-															href="#delete_modal">
-															<i class="fe fe-trash"></i> Delete
-														</a>
-													</div>
-												</td>
-											</tr>
-											<tr>
-												<td><a href="invoice.html">#IN0009</a></td>
-												<td>#09</td>
-												<td>
-													<h2 class="table-avatar">
-														<a href="profile.html" class="avatar avatar-sm mr-2"><img
-																class="avatar-img rounded-circle"
-																src="/assets/img/user/user8.jpg" alt="User Image"></a>
-														<a href="profile.html">Walter Roberson</a>
-													</h2>
-												</td>
-												<td>$100.00</td>
-												<td>5 Nov 2019</td>
-												<td class="text-center">
-													<span class="badge badge-pill bg-success inv-badge">Paid</span>
-												</td>
-												<td class="text-right">
-													<div class="actions">
-
-														<a data-toggle="modal" href="#edit_invoice_report"
-															class="btn btn-sm bg-success-light mr-2">
-															<i class="fe fe-pencil"></i> Edit
-														</a>
-														<a class="btn btn-sm bg-danger-light" data-toggle="modal"
-															href="#delete_modal">
-															<i class="fe fe-trash"></i> Delete
-														</a>
-													</div>
-												</td>
-											</tr>
-											<tr>
-												<td><a href="invoice.html">#IN0010</a></td>
-												<td>#10</td>
-												<td>
-													<h2 class="table-avatar">
-														<a href="profile.html" class="avatar avatar-sm mr-2"><img
-																class="avatar-img rounded-circle"
-																src="/assets/img/user/user9.jpg" alt="User Image"></a>
-														<a href="profile.html">Robert Rhodes </a>
-													</h2>
-												</td>
-												<td>$120.00</td>
-												<td>7 Nov 2019</td>
-												<td class="text-center">
-													<span class="badge badge-pill bg-success inv-badge">Paid</span>
-												</td>
-												<td class="text-right">
-													<div class="actions">
-
-														<a data-toggle="modal" href="#edit_invoice_report"
-															class="btn btn-sm bg-success-light mr-2">
-															<i class="fe fe-pencil"></i> Edit
-														</a>
-														<a class="btn btn-sm bg-danger-light" data-toggle="modal"
-															href="#delete_modal">
-															<i class="fe fe-trash"></i> Delete
-														</a>
-													</div>
-												</td>
-											</tr>
+											{/volist}
 										</tbody>
 									</table>
 								</div>
@@ -430,65 +176,6 @@
 
 	</div>
 	<!-- /Main Wrapper -->
-
-	<!-- Edit Details Modal -->
-	<div class="modal fade" id="edit_invoice_report" aria-hidden="true" role="dialog">
-		<div class="modal-dialog modal-dialog-centered" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title">Edit Invoice Report</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body">
-					<form>
-						<div class="row form-row">
-							<div class="col-12 col-sm-6">
-								<div class="form-group">
-									<label>Invoice Number</label>
-									<input type="text" class="form-control" value="#INV-0001">
-								</div>
-							</div>
-							<div class="col-12 col-sm-6">
-								<div class="form-group">
-									<label>Mentee ID</label>
-									<input type="text" class="form-control" value="	#01">
-								</div>
-							</div>
-							<div class="col-12 col-sm-6">
-								<div class="form-group">
-									<label>Mentee Name</label>
-									<input type="text" class="form-control" value="Jonathan Doe">
-								</div>
-							</div>
-							<div class="col-12 col-sm-6">
-								<div class="form-group">
-									<label>Mentee Image</label>
-									<input type="file" class="form-control">
-								</div>
-							</div>
-							<div class="col-12 col-sm-6">
-								<div class="form-group">
-									<label>Total Amount</label>
-									<input type="text" class="form-control" value="$200.00">
-								</div>
-							</div>
-							<div class="col-12 col-sm-6">
-								<div class="form-group">
-									<label>Created Date</label>
-									<input type="text" class="form-control" value="29th Oct 2019">
-								</div>
-							</div>
-
-						</div>
-						<button type="submit" class="btn btn-primary btn-block">Save Changes</button>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- /Edit Details Modal -->
 
 	<!-- Delete Modal -->
 	<div class="modal fade" id="delete_modal" aria-hidden="true" role="dialog">
