--- a/application/admin/view/index/create.html
+++ b/application/admin/view/index/create.html
@@ -4,7 +4,7 @@
  * @Author: Zoey Cheung
  * @Date: 2020-07-26 14:30:47
  * @LastEditors: Zoey Cheung
- * @LastEditTime: 2020-09-12 20:31:07
+ * @LastEditTime: 2020-09-13 15:22:39
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -108,7 +108,7 @@
 
                 <div class="row">
                     <div class="col-sm-12">
-                        <form class="text-capitalize" action="{:url('/')}" enctype="multipart/form-data" method="POST">
+                        <form class="text-capitalize" action="{:url('/admin/index/save')}" enctype="multipart/form-data" method="POST">
                             <div class="form-group">
                                 <label for="goods_sn">Goods Sn.</label>
                                 <input type="text" class="form-control" name="goods_sn"
