--- a/application/admin/view/index/edit.html
+++ b/application/admin/view/index/edit.html
@@ -4,7 +4,7 @@
  * @Author: Zoey Cheung
  * @Date: 2020-07-26 14:30:47
  * @LastEditors: Zoey Cheung
- * @LastEditTime: 2020-09-12 20:26:00
+ * @LastEditTime: 2020-09-13 15:28:21
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -87,80 +87,88 @@
             </div>
         </div>
         <!-- /Sidebar -->
-        <!-- Page Header -->
-        <div class="page-header">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h3 class="page-title">{$title}</h3>
-                    <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="{:url('/')}">Goods</a></li>
-                        <li class="breadcrumb-item active">{$title}</li>
-                    </ul>
+        <!-- Page Wrapper -->
+        <div class="page-wrapper">
+            <div class="content container-fluid">
+                <!-- Page Header -->
+                <div class="page-header">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <h3 class="page-title">{$title}</h3>
+                            <ul class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="{:url('/')}">Goods</a></li>
+                                <li class="breadcrumb-item active">{$title}</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
+                <!-- /Page Header -->
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <form class="text-capitalize" action="{:url('/admin/index/update')}"
+                            enctype="multipart/form-data" method="POST">
+                            <input type="hidden" name="_method" value="put">
+                            <input type="hidden" name="id" value="{$goods.id}"/>
+                            <div class="form-group">
+                                <label for="goods_sn">Goods Sn.</label>
+                                <input type="text" class="form-control" name="goods_sn"
+                                    placeholder="Commodity custom code" value="{$goods.goods_sn}">
+                            </div>
+                            <div class="form-group">
+                                <label for="goods_name">Goods Name</label>
+                                <input type="text" class="form-control" name="goods_name" value="{$goods.goods_name}">
+                            </div>
+                            <div class="form-group">
+                                <label for="goods_quantity">quantity</label>
+                                <input type="text" class="form-control" name="goods_quantity"
+                                    value="{$goods.goods_quantity}" placeholder="0">
+                            </div>
+                            <div class="form-group">
+                                <label for="origin_price">Original price</label>
+                                <input type="text" class="form-control" name="origin_price"
+                                    value="{$goods.origin_price}" placeholder="0.00">
+                            </div>
+                            <div class="form-group">
+                                <label for="goods_price">Discounted prices</label>
+                                <input type="text" class="form-control" name="goods_price" value="{$goods.goods_price}"
+                                    placeholder="0.00">
+                            </div>
+                            <div class="form-group">
+                                <label for="goods_standard">specification</label>
+                                <input type="text" class="form-control" name="goods_standard"
+                                    value="{$goods.goods_standard}">
+                            </div>
+                            <div class="form-group">
+                                <label for="goods_description">description</label>
+                                <textarea class="form-control" rows="8" name="goods_description" id="goods_description"
+                                    style="display: none;">{$goods.goods_description}</textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="thumb_img">thumb image</label>
+                                <input type="file" class="form-control-file" name="thumb_img">
+                                <small id="imgHelp" class="form-text text-muted">Recommended image
+                                    size:270 × 380</small>
+                                <img src="__GOODS_IMG__/{$goods.thumb_img}" alt="{$goods.goods_name}"
+                                    style="width: 270px;">
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" name="is_recommend" {if
+                                    $goods.is_recommend}checked{/if}> <label class="form-check-label"
+                                    for="is_recommend">Index
+                                Recommend</label>
+                                <small id="recommendHelp" class="form-text text-muted">The checked products will be
+                                    displayed on
+                                    the homepage.</small>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+
             </div>
         </div>
-        <!-- /Page Header -->
-
-        <div class="row">
-            <div class="col-sm-12">
-                <form class="text-capitalize" action="{:url('/index/update')}/{$goods.id}" enctype="multipart/form-data"
-                    method="POST">
-                    {:token_field()}
-                    <input type="hidden" name="_method" value="put">
-                    <div class="form-group">
-                        <label for="goods_sn">Goods Sn.</label>
-                        <input type="text" class="form-control" name="goods_sn" placeholder="Commodity custom code"
-                            value="{$goods.goods_sn}">
-                    </div>
-                    <div class="form-group">
-                        <label for="goods_name">Goods Name</label>
-                        <input type="text" class="form-control" name="goods_name" value="{$goods.goods_name}">
-                    </div>
-                    <div class="form-group">
-                        <label for="goods_quantity">quantity</label>
-                        <input type="text" class="form-control" name="goods_quantity" value="{$goods.goods_quantity}"
-                            placeholder="0">
-                    </div>
-                    <div class="form-group">
-                        <label for="origin_price">Original price</label>
-                        <input type="text" class="form-control" name="origin_price" value="{$goods.origin_price}"
-                            placeholder="0.00">
-                    </div>
-                    <div class="form-group">
-                        <label for="goods_price">Discounted prices</label>
-                        <input type="text" class="form-control" name="goods_price" value="{$goods.goods_price}"
-                            placeholder="0.00">
-                    </div>
-                    <div class="form-group">
-                        <label for="goods_standard">specification</label>
-                        <input type="text" class="form-control" name="goods_standard" value="{$goods.goods_standard}">
-                    </div>
-                    <div class="form-group">
-                        <label for="goods_description">description</label>
-                        <textarea class="form-control" rows="8" name="goods_description" id="goods_description"
-                            style="display: none;">{$goods.goods_description}</textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="thumb_img">thumb image</label>
-                        <input type="file" class="form-control-file" name="thumb_img">
-                        <small id="imgHelp" class="form-text text-muted">Recommended image size:270 × 380</small>
-                        <img src="__GOODS_IMG__/{$goods.thumb_img}" alt="{$goods.goods_name}" style="width: 270px;">
-                    </div>
-                    <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" name="is_recommend" {if
-                            $goods.is_recommend}checked{/if}> <label class="form-check-label" for="is_recommend">Index
-                        Recommend</label>
-                        <small id="recommendHelp" class="form-text text-muted">The checked products will be displayed on
-                            the homepage.</small>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-        </div>
-
-    </div>
-    </div>
-    <!-- /Page Wrapper -->
+        <!-- /Page Wrapper -->
     </div>
     <!-- /Main Wrapper -->
 
