--- a/application/index/view/index/login.html
+++ b/application/index/view/index/login.html
@@ -1,3 +1,11 @@
+<!--
+ * @Description: 
+ * @version: V 1.0
+ * @Author: Zoey Cheung
+ * @Date: 2020-09-11 10:05:28
+ * @LastEditors: Zoey Cheung
+ * @LastEditTime: 2020-09-13 15:40:44
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -30,12 +38,12 @@
 							<p class="account-subtitle">Access to my account</p>
 
 							<!-- Form -->
-							<form action="index.html">
+							<form action="{:url('/index/index/login_check')}" method="POST">
 								<div class="form-group">
-									<input class="form-control" type="text" placeholder="Phone">
+									<input class="form-control" type="text" name="username" placeholder="Phone">
 								</div>
 								<div class="form-group">
-									<input class="form-control" type="text" placeholder="Password">
+									<input class="form-control" type="text" name="password" placeholder="Password">
 								</div>
 								<div class="form-group">
 									<button class="btn btn-block" type="submit">Login</button>
