--- a/application/index/view/index/register.html
+++ b/application/index/view/index/register.html
@@ -1,3 +1,11 @@
+<!--
+ * @Description: 
+ * @version: V 1.0
+ * @Author: Zoey Cheung
+ * @Date: 2020-09-11 10:05:48
+ * @LastEditors: Zoey Cheung
+ * @LastEditTime: 2020-09-13 16:12:32
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -30,15 +38,15 @@
 							<p class="account-subtitle">Register a personal account</p>
 
 							<!-- Form -->
-							<form action="login.html">
+							<form action="{:url('/index/index/create')}" method="POST">
 								<div class="form-group">
-									<input class="form-control" type="text" placeholder="Name">
+									<input class="form-control" type="text" name="nickname" placeholder="Name">
 								</div>
 								<div class="form-group">
-									<input class="form-control" type="text" placeholder="Phone">
+									<input class="form-control" type="text" name="username" placeholder="Phone">
 								</div>
 								<div class="form-group">
-									<input class="form-control" type="text" placeholder="Password">
+									<input class="form-control" type="text" name="password" placeholder="Password">
 								</div>
 								<div class="form-group">
 									<input class="form-control" type="text" placeholder="Confirm Password">
